# MVZK_QT

./: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  README.md  catt.sh  output.txt
cmake/: FindTaglib.cmake
mainwindow/: MainWindow.cpp  MainWindow.h  VisualizerWidget.cpp  VisualizerWidget.h
player/: MusicPlayer.cpp  MusicPlayer.h
search/: Search.cpp  Search.h
widgets/: MarqueeLabel.cpp  MarqueeLabel.h
